Make huge refactoring changes to program logic, improve and update documentation, add 2019, 220, 2021 budgets to database, increase testing coverage to above 70% of instructions